@@ -24,10 +24,14 @@ import com.google.cloud.storage.Storage;
 import com.google.cloud.storage.StorageException;
 import com.google.cloud.storage.StorageOptions;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
+import org.apache.nifi.migration.ProxyServiceMigration;
 import org.apache.nifi.processor.ProcessContext;
+import org.apache.nifi.processors.gcp.AbstractGCPProcessor;
 import org.apache.nifi.processors.gcp.util.MockReadChannel;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
+import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -203,7 +207,7 @@ public class FetchGCSObjectTest extends AbstractGCSTest {
 
         runner.assertAllFlowFilesTransferred(FetchGCSObject.REL_SUCCESS);
         runner.assertTransferCount(FetchGCSObject.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).getFirst();
 
         flowFile.assertContentEquals(CONTENT);
         flowFile.assertAttributeEquals(BUCKET_ATTR, BUCKET);
@@ -257,7 +261,7 @@ public class FetchGCSObjectTest extends AbstractGCSTest {
 
         runner.assertAllFlowFilesTransferred(FetchGCSObject.REL_SUCCESS);
         runner.assertTransferCount(FetchGCSObject.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(OWNER_ATTR, OWNER_USER_EMAIL);
         flowFile.assertAttributeEquals(OWNER_TYPE_ATTR, "user");
     }
@@ -290,7 +294,7 @@ public class FetchGCSObjectTest extends AbstractGCSTest {
 
         runner.assertAllFlowFilesTransferred(FetchGCSObject.REL_SUCCESS);
         runner.assertTransferCount(FetchGCSObject.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(OWNER_ATTR, OWNER_GROUP_EMAIL);
         flowFile.assertAttributeEquals(OWNER_TYPE_ATTR, "group");
     }
@@ -325,7 +329,7 @@ public class FetchGCSObjectTest extends AbstractGCSTest {
 
         runner.assertAllFlowFilesTransferred(FetchGCSObject.REL_SUCCESS);
         runner.assertTransferCount(FetchGCSObject.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(FetchGCSObject.REL_SUCCESS).getFirst();
 
         flowFile.assertAttributeEquals(OWNER_ATTR, OWNER_DOMAIN);
         flowFile.assertAttributeEquals(OWNER_TYPE_ATTR, "domain");
@@ -532,5 +536,34 @@ public class FetchGCSObjectTest extends AbstractGCSTest {
 
         runner.assertAllFlowFilesTransferred(FetchGCSObject.REL_FAILURE);
         runner.assertTransferCount(FetchGCSObject.REL_FAILURE, 1);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        TestRunner testRunner = TestRunners.newTestRunner(FetchGCSObject.class);
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("gcs-bucket", FetchGCSObject.BUCKET.getName()),
+                Map.entry("gcs-key", FetchGCSObject.KEY.getName()),
+                Map.entry("gcs-generation", FetchGCSObject.GENERATION.getName()),
+                Map.entry("gcs-server-side-encryption-key", FetchGCSObject.ENCRYPTION_KEY.getName()),
+                Map.entry("gcs-object-range-start", FetchGCSObject.RANGE_START.getName()),
+                Map.entry("gcs-object-range-length", FetchGCSObject.RANGE_LENGTH.getName()),
+                Map.entry("storage-api-url", AbstractGCSProcessor.STORAGE_API_URL.getName()),
+                Map.entry("gcp-project-id", AbstractGCPProcessor.PROJECT_ID.getName()),
+                Map.entry("gcp-retry-count", AbstractGCPProcessor.RETRY_COUNT.getName()),
+                Map.entry(ProxyServiceMigration.OBSOLETE_PROXY_CONFIGURATION_SERVICE, ProxyServiceMigration.PROXY_CONFIGURATION_SERVICE)
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = testRunner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+
+        final Set<String> expectedRemoved = Set.of(
+                "gcp-proxy-host",
+                "gcp-proxy-port",
+                "gcp-proxy-user-name",
+                "gcp-proxy-user-password"
+        );
+
+        assertEquals(expectedRemoved, propertyMigrationResult.getPropertiesRemoved());
     }
 }
