@@ -23,6 +23,8 @@ import org.apache.nifi.avro.AvroTypeUtil;
 import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.processors.standard.faker.FakerMethodHolder;
 import org.apache.nifi.processors.standard.faker.FakerUtils;
+import org.apache.nifi.processors.standard.faker.PredefinedRecordSchema;
+import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.serialization.RecordReader;
 import org.apache.nifi.serialization.record.MockRecordWriter;
 import org.apache.nifi.serialization.record.Record;
@@ -31,6 +33,7 @@ import org.apache.nifi.serialization.record.RecordFieldType;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.serialization.record.type.RecordDataType;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -46,7 +49,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
@@ -85,7 +87,7 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
         final String output = flowFile.getContent();
         for (String line : output.split(System.lineSeparator())) {
             // A null value would not be output so a comma would be the last character on the line
@@ -114,7 +116,7 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
         final String output = flowFile.getContent();
         for (String line : output.split(System.lineSeparator())) {
             // A null value would not be output so a comma would be the last character on the line
@@ -143,7 +145,7 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
         // null values should cause all fields to be empty in the output
         // create a string of commas whose number equals the number of fields in the datatypeFunctionMap (size - 1 copies)
         flowFile.assertContentEquals(String.join("", Collections.nCopies(FakerUtils.getDatatypeFunctionMap().size() - 1, ",")) + "\n");
@@ -153,10 +155,13 @@ public class TestGenerateRecord {
     @Test
     public void testFieldsReturnValue() throws Exception {
 
-        List<Field> fieldTypeFields = Arrays.stream(GenerateRecord.class.getFields()).filter((field) -> field.getName().startsWith("FT_")).collect(Collectors.toList());
+        List<Field> fieldTypeFields = Arrays.stream(GenerateRecord.class.getFields()).filter((field) -> field.getName().startsWith("FT_")).toList();
         for (Field field : fieldTypeFields) {
             testRunner.setProperty(field.getName().toLowerCase(Locale.ROOT), ((AllowableValue) field.get(processor)).getValue());
         }
+
+        // Add at least one dynamic property to satisfy schema configuration validation
+        testRunner.setProperty("testField", "Name.fullName");
 
         final Map<String, String> recordFields = processor.getFields(testRunner.getProcessContext());
         final RecordSchema outputSchema = processor.generateRecordSchema(recordFields, true);
@@ -190,7 +195,7 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
         final String output = flowFile.getContent();
         for (String line : output.split(System.lineSeparator())) {
             // A null value would not be output so a comma would be the last character on the line
@@ -214,7 +219,7 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
 
         final AvroReader avroReader = new AvroReader();
         testRunner.addControllerService("avroReader", avroReader);
@@ -222,7 +227,7 @@ public class TestGenerateRecord {
         final byte[] validFlowFileBytes = flowFile.toByteArray();
         try (
                 final ByteArrayInputStream resultContentStream = new ByteArrayInputStream(validFlowFileBytes);
-                final RecordReader recordReader = avroReader.createRecordReader(flowFile.getAttributes(), resultContentStream, validFlowFileBytes.length, testRunner.getLogger());
+                final RecordReader recordReader = avroReader.createRecordReader(flowFile.getAttributes(), resultContentStream, validFlowFileBytes.length, testRunner.getLogger())
         ) {
             // Check correct schema
             final RecordSchema resultSchema = recordReader.getSchema();
@@ -283,8 +288,145 @@ public class TestGenerateRecord {
 
         testRunner.run();
         testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
-        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
         // null values should cause all fields to be empty in the output (2 top-level record fields in this case
         flowFile.assertContentEquals(",\n");
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.of(
+                "record-writer", GenerateRecord.RECORD_WRITER.getName(),
+                "number-of-records", GenerateRecord.NUM_RECORDS.getName(),
+                "nullable-fields", GenerateRecord.NULLABLE_FIELDS.getName(),
+                "null-percentage", GenerateRecord.NULL_PERCENTAGE.getName(),
+                "schema-text", GenerateRecord.SCHEMA_TEXT.getName()
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = testRunner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+    }
+
+    @Test
+    public void testValidationFailsWithNoSchemaConfiguration() throws InitializationException {
+        final MockRecordWriter recordWriter = new MockRecordWriter(null, true);
+        testRunner.addControllerService("record-writer", recordWriter);
+        testRunner.enableControllerService(recordWriter);
+        testRunner.setProperty(GenerateRecord.RECORD_WRITER, "record-writer");
+        testRunner.setProperty(GenerateRecord.NUM_RECORDS, "1");
+
+        testRunner.assertNotValid();
+    }
+
+    @Test
+    public void testValidationFailsWithMultipleSchemaConfigurations() throws Exception {
+        String schemaText = new String(Files.readAllBytes(Paths.get("src/test/resources/TestGenerateRecord/nested_nullable.avsc")));
+
+        final MockRecordWriter recordWriter = new MockRecordWriter(null, true);
+        testRunner.addControllerService("record-writer", recordWriter);
+        testRunner.enableControllerService(recordWriter);
+        testRunner.setProperty(GenerateRecord.RECORD_WRITER, "record-writer");
+        testRunner.setProperty(GenerateRecord.NUM_RECORDS, "1");
+
+        // Set both Schema Text and Predefined Schema - should be invalid
+        testRunner.setProperty(GenerateRecord.SCHEMA_TEXT, schemaText);
+        testRunner.setProperty(GenerateRecord.PREDEFINED_SCHEMA, PredefinedRecordSchema.PERSON.name());
+
+        testRunner.assertNotValid();
+    }
+
+    @Test
+    public void testValidationFailsWithPredefinedSchemaAndDynamicProperties() throws Exception {
+        final MockRecordWriter recordWriter = new MockRecordWriter(null, true);
+        testRunner.addControllerService("record-writer", recordWriter);
+        testRunner.enableControllerService(recordWriter);
+        testRunner.setProperty(GenerateRecord.RECORD_WRITER, "record-writer");
+        testRunner.setProperty(GenerateRecord.NUM_RECORDS, "1");
+
+        // Set both Predefined Schema and dynamic property - should be invalid
+        testRunner.setProperty(GenerateRecord.PREDEFINED_SCHEMA, PredefinedRecordSchema.PERSON.name());
+        testRunner.setProperty("myField", "Address.fullAddress");
+
+        testRunner.assertNotValid();
+    }
+
+    @Test
+    public void testPredefinedSchemaPerson() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.PERSON, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaOrder() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.ORDER, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaEvent() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.EVENT, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaSensor() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.SENSOR, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaProduct() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.PRODUCT, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaStockTrade() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.STOCK_TRADE, 5);
+    }
+
+    @Test
+    public void testPredefinedSchemaCompleteExample() throws Exception {
+        testPredefinedSchema(PredefinedRecordSchema.COMPLETE_EXAMPLE, 3);
+    }
+
+    private void testPredefinedSchema(PredefinedRecordSchema predefinedSchema, int numRecords) throws Exception {
+        final RecordSchema schema = predefinedSchema.getSchema(true);
+        final MockRecordWriter recordWriter = new MockRecordWriter(null, true, -1, false, schema);
+        testRunner.addControllerService("record-writer", recordWriter);
+        testRunner.enableControllerService(recordWriter);
+
+        testRunner.setProperty(GenerateRecord.RECORD_WRITER, "record-writer");
+        testRunner.setProperty(GenerateRecord.PREDEFINED_SCHEMA, predefinedSchema.name());
+        testRunner.setProperty(GenerateRecord.NULLABLE_FIELDS, "true");
+        testRunner.setProperty(GenerateRecord.NULL_PERCENTAGE, "0");
+        testRunner.setProperty(GenerateRecord.NUM_RECORDS, String.valueOf(numRecords));
+
+        testRunner.assertValid();
+        testRunner.run();
+
+        testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
+
+        // Verify record count attribute
+        flowFile.assertAttributeEquals("record.count", String.valueOf(numRecords));
+    }
+
+    @Test
+    public void testPredefinedSchemaWithNullPercentage() throws Exception {
+        final RecordSchema schema = PredefinedRecordSchema.PERSON.getSchema(true);
+        final MockRecordWriter recordWriter = new MockRecordWriter(null, true, -1, false, schema);
+        testRunner.addControllerService("record-writer", recordWriter);
+        testRunner.enableControllerService(recordWriter);
+
+        testRunner.setProperty(GenerateRecord.RECORD_WRITER, "record-writer");
+        testRunner.setProperty(GenerateRecord.PREDEFINED_SCHEMA, PredefinedRecordSchema.PERSON.name());
+        testRunner.setProperty(GenerateRecord.NULLABLE_FIELDS, "true");
+        testRunner.setProperty(GenerateRecord.NULL_PERCENTAGE, "100");
+        testRunner.setProperty(GenerateRecord.NUM_RECORDS, "1");
+
+        testRunner.assertValid();
+        testRunner.run();
+
+        testRunner.assertTransferCount(GenerateRecord.REL_SUCCESS, 1);
+        MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(GenerateRecord.REL_SUCCESS).getFirst();
+
+        // Verify record count attribute
+        flowFile.assertAttributeEquals("record.count", "1");
     }
 }
