@@ -17,12 +17,15 @@
 package org.apache.nifi.processors.standard;
 
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Test;
 
 import java.util.HashMap;
 import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class TestValidateCsv {
 
@@ -99,7 +102,7 @@ public class TestValidateCsv {
         runner.run();
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals("Name,Birthdate,Weight\nJohn,22/11/1954,63.2\nBob,01/03/2004,45.0");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals("Name,Birthdate,Weight\nJohn,22/11/1954,63.2\nBob,01/03/2004,45.0");
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 0);
 
         runner.clearTransferState();
@@ -109,7 +112,7 @@ public class TestValidateCsv {
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 0);
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertContentEquals("Name,Birthdate,Weight\nJohn,22/11/1954,63a2\nBob,01/032004,45.0");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertContentEquals("Name,Birthdate,Weight\nJohn,22/11/1954,63a2\nBob,01/032004,45.0");
 
         runner.clearTransferState();
 
@@ -117,9 +120,9 @@ public class TestValidateCsv {
         runner.run();
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals("Name,Birthdate,Weight\nBob,01/03/2004,45.0");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals("Name,Birthdate,Weight\nBob,01/03/2004,45.0");
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertContentEquals("Name,Birthdate,Weight\nJohn,22/111954,63.2");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertContentEquals("Name,Birthdate,Weight\nJohn,22/111954,63.2");
     }
 
     @Test
@@ -136,7 +139,7 @@ public class TestValidateCsv {
         runner.run();
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals("#Name,Birthdate,Weight\nJohn,\"\",63.2\nBob,,45.0");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals("#Name,Birthdate,Weight\nJohn,\"\",63.2\nBob,,45.0");
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 0);
     }
 
@@ -156,12 +159,12 @@ public class TestValidateCsv {
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
 
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals("John\r\nBob\r\nTom");
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertAttributeEquals("count.total.lines", "5");
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertAttributeEquals("count.valid.lines", "3");
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertContentEquals("Bob\r\nJohn");
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertAttributeEquals("count.invalid.lines", "2");
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertAttributeEquals("count.total.lines", "5");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals("John\r\nBob\r\nTom");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertAttributeEquals("count.total.lines", "5");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertAttributeEquals("count.valid.lines", "3");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertContentEquals("Bob\r\nJohn");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertAttributeEquals("count.invalid.lines", "2");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertAttributeEquals("count.total.lines", "5");
     }
 
     @Test
@@ -181,7 +184,7 @@ public class TestValidateCsv {
         runner.enqueue("John,22/111954,abc\r\nBob,01/03/2004,45.0");
         runner.run();
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertAttributeEquals("validation.error.message",
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertAttributeEquals("validation.error.message",
                 "At {line=1, row=1}, '22/111954' could not be parsed as a Date at {column=2}, 'abc' could not be parsed as a Double at {column=3}");
     }
 
@@ -350,7 +353,7 @@ public class TestValidateCsv {
         runner.enqueue("test,test,testapache.org");
         runner.run();
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertAttributeEquals("validation.error.message",
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertAttributeEquals("validation.error.message",
                 "'testapache.org' does not match the regular expression '[a-z0-9\\._]+@[a-z0-9\\.]+' at {line=1, row=1, column=3}");
     }
 
@@ -498,7 +501,7 @@ public class TestValidateCsv {
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 0);
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).get(0).assertContentEquals(row);
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_INVALID).getFirst().assertContentEquals(row);
         runner.clearTransferState();
 
         runner.setProperty(ValidateCsv.SCHEMA, "null,null,null");
@@ -507,7 +510,7 @@ public class TestValidateCsv {
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 0);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals(row);
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals(row);
     }
 
     @Test
@@ -524,7 +527,23 @@ public class TestValidateCsv {
         runner.run();
 
         runner.assertTransferCount(ValidateCsv.REL_VALID, 1);
-        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).get(0).assertContentEquals("Header 1, Header 2, Header 3\n\"Content 1a, Content 1b\", Content 2, Content 3");
+        runner.getFlowFilesForRelationship(ValidateCsv.REL_VALID).getFirst().assertContentEquals("Header 1, Header 2, Header 3\n\"Content 1a, Content 1b\", Content 2, Content 3");
         runner.assertTransferCount(ValidateCsv.REL_INVALID, 0);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("validate-csv-schema", ValidateCsv.SCHEMA.getName()),
+                Map.entry("validate-csv-header", ValidateCsv.HEADER.getName()),
+                Map.entry("validate-csv-quote", ValidateCsv.QUOTE_CHARACTER.getName()),
+                Map.entry("validate-csv-delimiter", ValidateCsv.DELIMITER_CHARACTER.getName()),
+                Map.entry("validate-csv-eol", ValidateCsv.END_OF_LINE_CHARACTER.getName()),
+                Map.entry("validate-csv-strategy", ValidateCsv.VALIDATION_STRATEGY.getName()),
+                Map.entry("validate-csv-violations", ValidateCsv.INCLUDE_ALL_VIOLATIONS.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 }
