@@ -25,8 +25,11 @@ import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.schema.access.SchemaAccessUtils;
 import org.apache.nifi.schema.access.SchemaNotFoundException;
 import org.apache.nifi.serialization.RecordSetWriter;
+import org.apache.nifi.serialization.SchemaRegistryRecordSetWriter;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.serialization.record.SchemaIdentifier;
+import org.apache.nifi.util.MockPropertyConfiguration;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Test;
@@ -39,8 +42,17 @@ import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Map;
+import java.util.Set;
 
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_BRANCH_NAME;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_NAME;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_REFERENCE_READER;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_REGISTRY;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_TEXT;
+import static org.apache.nifi.schema.access.SchemaAccessUtils.SCHEMA_VERSION;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -80,7 +92,7 @@ public class TestXMLRecordSetWriter {
                 "<name1>val1</name1><name2></name2></array_record>" +
                 "<array_record><array_field>1</array_field><array_field></array_field><array_field>3</array_field>" +
                 "<name1>val1</name1><name2></name2></array_record></root>";
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -100,7 +112,7 @@ public class TestXMLRecordSetWriter {
         String expected = "<array_record><array_field>1</array_field><array_field></array_field><array_field>3</array_field>" +
                 "<name1>val1</name1><name2></name2></array_record>";
 
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -122,7 +134,7 @@ public class TestXMLRecordSetWriter {
                 "<name1>val1</name1><name2></name2></RECORD_NODE>" +
                 "<RECORD_NODE><array_field>1</array_field><array_field></array_field><array_field>3</array_field>" +
                 "<name1>val1</name1><name2></name2></RECORD_NODE></ROOT_NODE>";
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -149,7 +161,7 @@ public class TestXMLRecordSetWriter {
                 "<name1>val1</name1><name2></name2></array_record>" +
                 "<array_record><array_field>1</array_field><array_field></array_field><array_field>3</array_field>" +
                 "<name1>val1</name1><name2></name2></array_record></ROOT_NODE>";
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -173,7 +185,7 @@ public class TestXMLRecordSetWriter {
                 "<name1>val1</name1></record>" +
                 "<record><array_field>1</array_field><array_field>3</array_field>" +
                 "<name1>val1</name1></record></root>";
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -198,7 +210,7 @@ public class TestXMLRecordSetWriter {
                 "<name1>val1</name1><name2></name2></record>" +
                 "<record><wrap><array_field>1</array_field><array_field></array_field><array_field>3</array_field></wrap>" +
                 "<name1>val1</name1><name2></name2></record></root>";
-        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).get(0)));
+        String actual = new String(runner.getContentAsByteArray(runner.getFlowFilesForRelationship(TestXMLRecordSetWriterProcessor.SUCCESS).getFirst()));
         assertThat(expected, CompareMatcher.isSimilarTo(actual).ignoreWhitespace().withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)));
     }
 
@@ -228,6 +240,40 @@ public class TestXMLRecordSetWriter {
             && e.getMessage().endsWith("has to be set."));
     }
 
+    @Test
+    void testMigrateProperties() {
+        final XMLRecordSetWriter service = new XMLRecordSetWriter();
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("suppress_nulls", XMLRecordSetWriter.SUPPRESS_NULLS.getName()),
+                Map.entry("pretty_print_xml", XMLRecordSetWriter.PRETTY_PRINT_XML.getName()),
+                Map.entry("omit_xml_declaration", XMLRecordSetWriter.OMIT_XML_DECLARATION.getName()),
+                Map.entry("root_tag_name", XMLRecordSetWriter.ROOT_TAG_NAME.getName()),
+                Map.entry("record_tag_name", XMLRecordSetWriter.RECORD_TAG_NAME.getName()),
+                Map.entry("array_wrapping", XMLRecordSetWriter.ARRAY_WRAPPING.getName()),
+                Map.entry("array_tag_name", XMLRecordSetWriter.ARRAY_TAG_NAME.getName()),
+                Map.entry("schema-cache", SchemaRegistryRecordSetWriter.SCHEMA_CACHE.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_ACCESS_STRATEGY_PROPERTY_NAME, SCHEMA_ACCESS_STRATEGY.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_REGISTRY_PROPERTY_NAME, SCHEMA_REGISTRY.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_NAME_PROPERTY_NAME, SCHEMA_NAME.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_BRANCH_NAME_PROPERTY_NAME, SCHEMA_BRANCH_NAME.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_VERSION_PROPERTY_NAME, SCHEMA_VERSION.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_TEXT_PROPERTY_NAME, SCHEMA_TEXT.getName()),
+                Map.entry(SchemaAccessUtils.OLD_SCHEMA_REFERENCE_READER_PROPERTY_NAME, SCHEMA_REFERENCE_READER.getName())
+        );
+
+        final Map<String, String> propertyValues = Map.of();
+        final MockPropertyConfiguration configuration = new MockPropertyConfiguration(propertyValues);
+        service.migrateProperties(configuration);
+
+        final PropertyMigrationResult result = configuration.toPropertyMigrationResult();
+        final Map<String, String> propertiesRenamed = result.getPropertiesRenamed();
+
+        assertEquals(expectedRenamed, propertiesRenamed);
+
+        final Set<String> expectedRemoved = Set.of("schema-protocol-version");
+        assertEquals(expectedRemoved, result.getPropertiesRemoved());
+    }
+
     static class _XMLRecordSetWriter extends XMLRecordSetWriter {
 
         RecordSchema recordSchema;
@@ -242,5 +288,4 @@ public class TestXMLRecordSetWriter {
             return super.createWriter(logger, this.recordSchema, out, attributes);
         }
     }
-
 }
